ESQL: `min_competitive` for `LuceneSourceOperator`
Creates the `min_competitive` implementation for providing a competitive
iterator to `LuceneSourceOperator`.