@@ -14,8 +14,10 @@ import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.index.IndexableField;
 import org.apache.lucene.index.NoMergePolicy;
 import org.apache.lucene.search.IndexSearcher;
+import org.apache.lucene.search.Query;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.tests.index.RandomIndexWriter;
+import org.elasticsearch.common.breaker.CircuitBreaker;
 import org.elasticsearch.common.breaker.CircuitBreakingException;
 import org.elasticsearch.common.lucene.search.Queries;
 import org.elasticsearch.common.settings.ClusterSettings;
@@ -25,6 +27,7 @@ import org.elasticsearch.compute.data.DoubleBlock;
 import org.elasticsearch.compute.data.ElementType;
 import org.elasticsearch.compute.data.IntBlock;
 import org.elasticsearch.compute.data.LongBlock;
+import org.elasticsearch.compute.data.LongVector;
 import org.elasticsearch.compute.data.Page;
 import org.elasticsearch.compute.lucene.IndexedByShardIdFromSingleton;
 import org.elasticsearch.compute.lucene.ShardContext;
@@ -35,6 +38,8 @@ import org.elasticsearch.compute.operator.Operator;
 import org.elasticsearch.compute.operator.PageConsumerOperator;
 import org.elasticsearch.compute.operator.SinkOperator;
 import org.elasticsearch.compute.operator.SourceOperator;
+import org.elasticsearch.compute.operator.topn.SharedMinCompetitive;
+import org.elasticsearch.compute.operator.topn.TopNEncoder;
 import org.elasticsearch.compute.test.OperatorTestCase;
 import org.elasticsearch.compute.test.SourceOperatorTestCase;
 import org.elasticsearch.compute.test.TestDriverFactory;
@@ -60,13 +65,19 @@ import org.junit.After;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.LongStream;
 
+import static org.elasticsearch.test.ListMatcher.matchesList;
+import static org.elasticsearch.test.MapMatcher.assertMap;
 import static org.hamcrest.Matchers.both;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
@@ -98,7 +109,7 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             }
 
             @Override
-            void checkPages(int numDocs, int limit, int maxPageSize, List<Page> results) {
+            void checkPages(boolean scoring, int numDocs, int limit, int maxPageSize, List<Page> results) {
                 int maxPages = Math.min(numDocs, limit);
                 int minPages = (int) Math.ceil((double) maxPages / maxPageSize);
                 assertThat(results, hasSize(both(greaterThanOrEqualTo(minPages)).and(lessThanOrEqualTo(maxPages))));
@@ -108,6 +119,11 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             int numResults(int numDocs) {
                 return numDocs;
             }
+
+            @Override
+            MinCompetitiveQuery.Factory minCompetitive(CircuitBreaker breaker) {
+                return randomMatchAllMinCompetitive(breaker);
+            }
         },
         MATCH_0 {
             @Override
@@ -116,13 +132,18 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             }
 
             @Override
-            void checkPages(int numDocs, int limit, int maxPageSize, List<Page> results) {
+            void checkPages(boolean scoring, int numDocs, int limit, int maxPageSize, List<Page> results) {
                 assertThat(results, hasSize(both(greaterThanOrEqualTo(0)).and(lessThanOrEqualTo(1))));
             }
 
             @Override
             int numResults(int numDocs) {
                 return Math.min(numDocs, 1);
+            }
+
+            @Override
+            MinCompetitiveQuery.Factory minCompetitive(CircuitBreaker breaker) {
+                return randomMatchAllMinCompetitive(breaker);
             }
         },
         MATCH_0_AND_1 {
@@ -135,7 +156,7 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             }
 
             @Override
-            void checkPages(int numDocs, int limit, int maxPageSize, List<Page> results) {
+            void checkPages(boolean scoring, int numDocs, int limit, int maxPageSize, List<Page> results) {
                 assertThat(results, hasSize(Math.min(numDocs, 2)));
                 if (results.isEmpty() == false) {
                     Page page = results.get(0);
@@ -155,6 +176,11 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             int numResults(int numDocs) {
                 return Math.min(numDocs, 2);
             }
+
+            @Override
+            MinCompetitiveQuery.Factory minCompetitive(CircuitBreaker breaker) {
+                return randomMatchAllMinCompetitive(breaker);
+            }
         },
         LTE_100_GT_100 {
             @Override
@@ -166,8 +192,8 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             }
 
             @Override
-            void checkPages(int numDocs, int limit, int maxPageSize, List<Page> results) {
-                MATCH_ALL.checkPages(numDocs, limit, maxPageSize, results);
+            void checkPages(boolean scoring, int numDocs, int limit, int maxPageSize, List<Page> results) {
+                MATCH_ALL.checkPages(scoring, numDocs, limit, maxPageSize, results);
                 for (Page page : results) {
                     IntBlock extra = page.getBlock(page.getBlockCount() - 2);
                     LongBlock data = page.getBlock(page.getBlockCount() - 1);
@@ -181,11 +207,44 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             int numResults(int numDocs) {
                 return numDocs;
             }
+
+            @Override
+            MinCompetitiveQuery.Factory minCompetitive(CircuitBreaker breaker) {
+                return randomMatchAllMinCompetitive(breaker);
+            }
+        },
+        MIN_COMPETITIVE_GT_100 {
+            @Override
+            List<LuceneSliceQueue.QueryAndTags> queryAndExtra() {
+                return List.of(new LuceneSliceQueue.QueryAndTags(Queries.ALL_DOCS_INSTANCE, List.of()));
+            }
+
+            @Override
+            void checkPages(boolean scoring, int numDocs, int limit, int maxPageSize, List<Page> results) {
+                MATCH_ALL.checkPages(scoring, numDocs, limit, maxPageSize, results);
+                for (Page r : results) {
+                    LongBlock sBlock = r.getBlock(initialBlockIndex(r, scoring, queryAndExtra()));
+                    LongVector sVector = sBlock.asVector();
+                    for (int p = 0; p < sVector.getPositionCount(); p++) {
+                        assertThat(sVector.getLong(p), greaterThan(100L));
+                    }
+                }
+            }
+
+            @Override
+            int numResults(int numDocs) {
+                return numDocs;
+            }
+
+            @Override
+            MinCompetitiveQuery.Factory minCompetitive(CircuitBreaker breaker) {
+                return minCompetitiveForQuery(breaker, SortedNumericDocValuesField.newSlowRangeQuery("s", 101, Long.MAX_VALUE));
+            }
         };
 
         abstract List<LuceneSliceQueue.QueryAndTags> queryAndExtra();
 
-        abstract void checkPages(int numDocs, int limit, int maxPageSize, List<Page> results);
+        abstract void checkPages(boolean scoring, int numDocs, int limit, int maxPageSize, List<Page> results);
 
         abstract int numResults(int numDocs);
 
@@ -195,6 +254,8 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
                 assertThat(shardContext.stats().stats().getTotal().getSearchLoadRate(), greaterThan(0d));
             }
         }
+
+        abstract MinCompetitiveQuery.Factory minCompetitive(CircuitBreaker breaker);
     }
 
     private final TestCase testCase;
@@ -204,7 +265,7 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
      */
     private final boolean scoring;
 
-    private Directory directory = newDirectory();
+    private final Directory directory = newDirectory();
     private IndexReader reader;
 
     public LuceneSourceOperatorTests(TestCase testCase, boolean scoring) {
@@ -239,6 +300,7 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
         Function<ShardContext, List<LuceneSliceQueue.QueryAndTags>> queryFunction = c -> testCase.queryAndExtra();
         int maxPageSize = between(10, Math.max(10, numDocs));
         int taskConcurrency = randomIntBetween(1, 4);
+        MinCompetitiveQuery.Factory minCompetitive = testCase.minCompetitive(blockFactory().breaker());
         return new LuceneSourceOperator.Factory(
             new IndexedByShardIdFromSingleton<>(ctx),
             queryFunction,
@@ -247,7 +309,8 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             taskConcurrency,
             maxPageSize,
             limit,
-            scoring
+            scoring,
+            minCompetitive
         );
     }
 
@@ -269,6 +332,31 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
             }
             return writer.getReader();
         }
+    }
+
+    static MinCompetitiveQuery.Factory randomMatchAllMinCompetitive(CircuitBreaker breaker) {
+        if (randomBoolean()) {
+            return null;
+        }
+        SharedMinCompetitive.KeyConfig config = new SharedMinCompetitive.KeyConfig(
+            ElementType.LONG,
+            TopNEncoder.DEFAULT_SORTABLE,
+            false,
+            false
+        );
+        SharedMinCompetitive.Supplier supplier = new SharedMinCompetitive.Supplier(breaker, List.of(config));
+        return new MinCompetitiveQuery.Factory(supplier, (context, min) -> Queries.ALL_DOCS_INSTANCE);
+    }
+
+    static MinCompetitiveQuery.Factory minCompetitiveForQuery(CircuitBreaker breaker, Query query) {
+        SharedMinCompetitive.KeyConfig config = new SharedMinCompetitive.KeyConfig(
+            ElementType.LONG,
+            TopNEncoder.DEFAULT_SORTABLE,
+            false,
+            false
+        );
+        SharedMinCompetitive.Supplier supplier = new SharedMinCompetitive.Supplier(breaker, List.of(config));
+        return new MinCompetitiveQuery.Factory(supplier, (context, min) -> query);
     }
 
     @Override
@@ -416,13 +504,13 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
         assertAllRefCountedSameInstance(results);
 
         for (Page page : results) {
-            LongBlock sBlock = page.getBlock(initialBlockIndex(page));
+            LongBlock sBlock = page.getBlock(initialBlockIndex(page, scoring, testCase.queryAndExtra()));
             for (int p = 0; p < page.getPositionCount(); p++) {
                 assertThat(sBlock.getLong(sBlock.getFirstValueIndex(p)), both(greaterThanOrEqualTo(0L)).and(lessThan((long) numDocs)));
             }
         }
 
-        testCase.checkPages(numDocs, limit, factory.maxPageSize(), results);
+        testCase.checkPages(scoring, numDocs, limit, factory.maxPageSize(), results);
         int count = results.stream().mapToInt(Page::getPositionCount).sum();
         logger.info("{} received={} limit={} numResults={}", factory.dataPartitioning, count, limit, testCase.numResults(numDocs));
         assertThat(count, equalTo(Math.min(limit, testCase.numResults(numDocs))));
@@ -430,14 +518,14 @@ public class LuceneSourceOperatorTests extends SourceOperatorTestCase {
     }
 
     // Returns the initial block index, ignoring the score block if scoring is enabled
-    private int initialBlockIndex(Page page) {
+    private static int initialBlockIndex(Page page, boolean scoring, List<LuceneSliceQueue.QueryAndTags> queryAndExtra) {
         assert page.getBlock(0) instanceof DocBlock : "expected doc block at index 0";
         int offset = 1;
         if (scoring) {
             assert page.getBlock(1) instanceof DoubleBlock : "expected double block at index 1";
             offset++;
         }
-        offset += testCase.queryAndExtra().get(0).tags().size();
+        offset += queryAndExtra.getFirst().tags().size();
         return offset;
     }
 
